--- a/Html_undangan.html
+++ b/Html_undangan.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <body>
-            
-        </body>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>undangan utami</title>
+</head>
+<body>
+    
+</body>
 </html>
