--- a/index.html
+++ b/index.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>undangan utami</title>
+    <title>undangan nikah express</title>
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Grey+Qo&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <div class="Resmi">
+        <p class="judul_undangan"> Undangan pernikahan </p>
+        <h1 style="color: grey;"> caelus % firefly </h1>
+        <img src="C:\Users\ACER\Downloads\Honkai.Star.Rail.600.4133865.jpg" alt="orang nikah">
+    </div>
+    <br>
+    <div class="kelompok">
+        <h2>Caelus</h2>
+        <h4> anak dari express trailblazer</h4>
+        <h2>firefly</h2>
+        <h4> anak dari stellaron hunter </h4>
+    </div>
+    <div class="diadakan">
+        <h2>acara ini diadakan pada</h2>
+        <ul>
+            <li>Sabtu 25 january 4550</li>
+            <li>15:00 PN p.k. selesai</li>
+            <li> di planet penacony </li>
+        </ul>
+    </div>
+        <div class="randomiz">
+    <h1> dengan ini kita mengundang Player dari Randomizer section </h1>
+
+    <ol>
+        <li>karuga</li>
+        <li>athar</li>
+        <li>hazure</li>
+        <li>rapi</li>
+        <li>bludhenry</li>
+    </Ol>
+        </div>
+    <br>
+        <div class="Map">
+
+        
+    <h2>lokasi stasiun express ke penacony</h2>
+    <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=137.54848480224612%2C35.35692127995706%2C137.98999786376956%2C35.54570085592609&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=12/35.4514/137.7692">Lihat peta lebih besar</a></small>
+
+    <br>
+    <audio controls loop src="D:\music\Random song\Gawr Gura - Night Dancer (AI Cover).mp3" autoplay></audio>
+        </div>
     
 </body>
 </html>
