nambah lagu dan image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="Resmi">
         <p class="judul_undangan"> Undangan pernikahan </p>
         <h1 style="color: grey;"> caelus % firefly </h1>
-        <img src="C:\Users\ACER\Downloads\Honkai.Star.Rail.600.4133865.jpg" alt="orang nikah">
+        <img src="CaeFly.jpg" alt="orang nikah">
     </div>
     <br>
     <div class="kelompok">
@@ -62,7 +62,7 @@
         <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=137.54848480224612%2C35.35692127995706%2C137.98999786376956%2C35.54570085592609&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=12/35.4514/137.7692">Lihat peta lebih besar</a></small>
     
         <br>
-        <audio controls loop src="D:\music\Random song\Gawr Gura - Night Dancer (AI Cover).mp3" autoplay></audio>
+        <audio controls loop src="Gawr Gura - Night Dancer (AI Cover).mp3" autoplay></audio>
             </div>
     
 </body>
